Fix collapse and background
index.scss
-- fixed the file path to the image so the deployed site will find it

album/ui.js
-- added "$(".collapse").collapse("hide")" to the createAlbumSuccess
function so it will close the collapse

auth/ui.js
-- added "$(".collapse").collapse("hide")" to both the signoutSuccess and
changePasswordSuccess functions to close the collapse

--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -54,7 +54,7 @@ section.auth-buttons, section.main-buttons {
   z-index: -1;
   width: 100%;
   height: 100%;
-  background-image: url("../../public/vinyl-records.jpg");
+  background-image: url("public/vinyl.records.jpg");
   background-size: cover;
   opacity: 0.8;
   top: 0;
